Bug 433154 - Notification bar close button is too big, description isn't vertically centered. r=ventnor
UltraBlame original commit: b961f1f931029cf4f4d654370d78f1022dfcc051

--- a/toolkit/themes/gnomestripe/global/global.css
+++ b/toolkit/themes/gnomestripe/global/global.css
@@ -1217,6 +1217,23 @@ moz
 DialogText
 ;
 }
+notification
+>
+button
+{
+margin
+-
+top
+:
+0
+;
+margin
+-
+bottom
+:
+0
+;
+}
 .
 autoscroller
 {
